--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,18 +7,18 @@ sonar.sourceEncoding=UTF-8
 ####### CODE SOURCE PRESENTATION #######
 #Datos de los fuentes y binarios
 sonar.sources=.
-sonar.java.binaries=ADN/build/intermediates/javac/debug/classes
+sonar.java.binaries=adn/build/intermediates/javac/debug/classes
 
 
 #### TEST ADN ####
 #Datos de los fuentes y binarios de los tests
-sonar.tests=domain/src/test/java
-sonar.java.test.binaries=ADN/build/intermediates/javac/debugUnitTest/classes
+sonar.tests=adn/src/test/java
+sonar.java.test.binaries=adn/build/intermediates/javac/debugUnitTest/classes
 sonar.java.test.libraries=/home/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
 
 #Envío de reportes de JUnit y Jacoco como resultado de la tarea test
 sonar.java.coveragePlugin=jacoco
-sonar.jacoco.reportPaths=ADN/build/jacoco/jacocoTestReport.xml
-sonar.junit.reportPaths=ADN/build/test-results/testDebugUnitTest
+sonar.jacoco.reportPaths=adn/build/jacoco/jacocoTestReport.xml
+sonar.junit.reportPaths=adn/build/test-results/testDebugUnitTest
 #Language
 sonar.language=java
