Se actualiza projectName

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Información del proyecto
-sonar.projectKey=co.com.ceiba.adn:ADN-alexis.quintero
-sonar.projectName=Ceiba-ADN(alexis.quintero)
+sonar.projectKey=co.com.ceiba.adn:adn-alexis.quintero
+sonar.projectName=Ceiba-Estacionamiento(alexis.quintero)
 #Datos de Configuracion
 sonar.sourceEncoding=UTF-8
 
