--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # Información del proyecto
-sonar.projectKey=co.com.ceiba.ceiba.adn:estacionamiento-alexis.quintero
+sonar.projectKey=co.com.ceiba:Estacionamiento.alexis.quintero
 sonar.projectName=Ceiba-Estacionamiento(alexis.quintero)
 #Datos de Configuracion
 sonar.sourceEncoding=UTF-8
