Se actualiza path de sonar tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.java.binaries=build/intermediates/javac/debug/classes
 
 #### TEST ADN ####
 #Datos de los fuentes y binarios de los tests
-sonar.tests=src/test/java
+sonar.tests=app/src/test/java
 sonar.java.test.binaries=build/intermediates/javac/debugUnitTest/classes
 sonar.java.test.libraries=/home/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
 
