--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.sourceEncoding=UTF-8
 
 ####### CODE SOURCE PRESENTATION #######
 #Datos de los fuentes y binarios
-sonar.sources=.
+sonar.sources=domain
 sonar.java.binaries=domain/build/intermediates/javac/debug/classes
 
 
