--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'dagger.hilt.android.plugin'
     id 'jacoco'
 }
 
@@ -30,7 +31,7 @@ android {
 }
 
 jacoco {
-    toolVersion = '0.8.1'
+    toolVersion = '0.8.5'
 }
 
 task jacocoTestReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
