--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,18 +6,18 @@ sonar.sourceEncoding=UTF-8
 
 ####### CODE SOURCE PRESENTATION #######
 #Datos de los fuentes y binarios
-sonar.sources=domain
-sonar.java.binaries=domain/build/intermediates/javac/debug/classes
+sonar.sources=dominio
+sonar.java.binaries=dominio/build/intermediates/javac/debug/classes
 
 
 #### TEST ADN ####
 #Datos de los fuentes y binarios de los tests
-sonar.java.test.binaries=domain/build/intermediates/javac/debugUnitTest/classes
+sonar.java.test.binaries=dominio/build/intermediates/javac/debugUnitTest/classes
 sonar.java.test.libraries=/home/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
 
 #Envío de reportes de JUnit y Jacoco como resultado de la tarea test
 sonar.java.coveragePlugin=jacoco
-sonar.jacoco.reportPaths=domain/build/jacoco/jacocoTestReport.xml
-sonar.junit.reportPaths=domain/build/test-results/testDebugUnitTest
+sonar.jacoco.reportPaths=dominio/build/jacoco/jacocoTestReport.xml
+sonar.junit.reportPaths=dominio/build/test-results/testDebugUnitTest
 #Language
 sonar.language=java
