--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.sourceEncoding=UTF-8
 
 ####### CODE SOURCE PRESENTATION #######
 #Datos de los fuentes y binarios
-sonar.sources=dominio
+sonar.sources=dominio/src/main/java
 sonar.java.binaries=dominio/build/intermediates/javac/debug/classes
 
 
